[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
service = { path = "../service" }
tokio = { version = "1.34.0", features = ["full"] }
axum = { version = "0.7.1", features = ["multipart"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["fs"] }
tower-cookies = "0.10.0"
anyhow = "1.0.75"
dotenvy = "0.15.7"
serde = "1.0.193"
serde_json = "1.0.108"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
jsonwebtoken = "9.3.0"
entity = { path = "../entity" }
migration = { path = "../migration" }
chrono = "0.4.38"
thiserror = "1.0"
validator = { version = "0.14.0", features = ["derive"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"