[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "entity"
path = "src/lib.rs"
[dependencies.sea-orm]
version = "0.12.15" # sea-orm version
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.8.0", features = ["v4"] }
validator = { version = "0.14.0", features = ["derive"] }
utoipa = { version = "5.0.0-beta.0" }
